--- a/backend/JJChatBackend/JJChatAPI/JJChatAPI.csproj
+++ b/backend/JJChatBackend/JJChatAPI/JJChatAPI.csproj
@@ -170,7 +170,9 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ChatMessageController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="DataAccess\JJChatControllerInstanceManager.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -231,7 +233,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="DataAccess\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
