--- a/backend/JJChatBackend/JJChatAPI/JJChatAPI.csproj
+++ b/backend/JJChatBackend/JJChatAPI/JJChatAPI.csproj
@@ -170,7 +170,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ChatMessageController.cs" />
+    <Compile Include="Controllers\ChatController.cs" />
+    <Compile Include="Controllers\FriendController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="DataAccess\JJChatControllerInstanceManager.cs" />
     <Compile Include="Global.asax.cs">
