--- a/backend/JJChatBackend/SharedData/SharedData.csproj
+++ b/backend/JJChatBackend/SharedData/SharedData.csproj
@@ -51,12 +51,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\JJLowPrioException.cs" />
     <Compile Include="Interfaces\IJJChatController.cs" />
+    <Compile Include="Interfaces\IJJChatLogger.cs" />
     <Compile Include="Interfaces\IMessage.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Models\ChatMessage.cs" />
     <Compile Include="Models\JSON\JSONChatMessageList.cs" />
     <Compile Include="Models\JSON\JSONChatMessage.cs" />
+    <Compile Include="Models\JSON\JSONJJLowPrioException.cs" />
+    <Compile Include="Models\JSON\JSONResponse.cs" />
     <Compile Include="Models\JSON\JSONUser.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
